--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Film and Media Studies Program | Wahington University in St. Louis</title>
+    <title>Film and Media Studies Program | Washington University in St. Louis</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -100,7 +101,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <a class="main" href="https://fms.artsci.wustl.edu/about"><h1>Film and Media Studies examines a vitally important aspect of visual culture in the 20th and 21st centuries, namely the development of film, television, radio, and other electronic media as aesthetic and cultural forms. Like other areas of learning, the study of different film and media is broken down into more specific domains.</h1></a>
+          <a class="main" href="about-us/index.html"><h1>Film and Media Studies examines a vitally important aspect of visual culture in the 20th and 21st centuries, namely the development of film, television, radio, and other electronic media as aesthetic and cultural forms. Like other areas of learning, the study of different film and media is broken down into more specific domains.</h1></a>
         </div> <!-- col -->
       </div>
     </div>
