--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
 
   <body>
 
+
     <div class="jumbotron">
       <div class="container">
-        <div class="row">
-          </div>
+
+          <h1><br><b>Film &amp; Media Studies</b></h1>
           <a class="btn btn-default btn-lg" href="https://fms.artsci.wustl.edu/files/fms/imce/guidebook-sp16.pdf" role="button" target="_blank">Spring 2016 FMS Guidebook</br><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a>
         </div>
       </div>
-    </div>
+
 
     <div class="container">
       <div class="row">
