--- a/about-us/index.html
+++ b/about-us/index.html
@@ -11,8 +11,7 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="../css/custom.css" rel="stylesheet">
-    <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
-
+    <script src="js/bootstrap.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -91,7 +90,7 @@
 
 <body>
 
-      <div id="mycarousel" class="carousel slide" data-ride="carousel">
+      <div id="mycarousel-2" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
               <div class="item active">
               <img src="../img/about-us.jpg" alt="" class="img-responsive">
@@ -106,22 +105,24 @@
 <br>
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-3 col-xs-12 col-sm-6 col-lg-3">
             <span class="glyphicon glyphicon-scissors" aria-hidden="true"></span>
             <h2>Criticism</h2>
             <p class="text-justify">&mdash; the close analysis of individual films, television programs, radio broadcasts, web pages, etc. Students learn to examine the various ways that the combination and interaction of image, sound, movement, and performance affect our experience of film and media. Why do some television shows make us laugh and others make us cry? How do specific films and programs shape our thoughts and beliefs?</p>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-xs-12 col-sm-6 col-lg-3">
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
             <h2>History</h2>
             <p class="text-justify">&mdash; the study of the historical development of film and media as art forms and as industries. A consideration of film and media in both their aesthetic and com-modity functions as well as the ways film and media reflect and influence the historical moments in which they are produced.</p>
+            <br>
+            <br>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-xs-12 col-sm-6 col-lg-3">
             <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
             <h2>Theory</h2>
             <p class="text-justify">&mdash; the investigation of the broader properties and aspects of the media. How do film and media communicate with its audiences? What are the social, aesthetic, and political dimensions of media as cultural forms? How do film and media challenge us, amuse us, and make us see things in new ways?</p>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-xs-12 col-sm-6 col-lg-3">
             <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
             <h2>Practice</h2>
             <p class="text-justify">&mdash; creative courses in video production and screenwriting. In order to ex-plore the film and media artist’s tools analytically, students in film and media studies need to gain something of an insider’s understanding of the tools of the trade. Creative courses aim to provide that understanding.</p>
@@ -135,7 +136,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
       <a class="main" href="https://fms.artsci.wustl.edu/files/fms/imce/guidebook-sp16.pdf"><h1 class="text-center"><u>DOWNLOAD THE SPRING 2016 GUIDEBOOK</u></h1></a>
     </div>
   </div>
@@ -147,7 +148,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
         <h2 class="text-left">Find the Path to Many Careers</h2>
         <br>
         <div class="row">
@@ -155,7 +156,7 @@
             <p class="text-justify ">The knowledge and skills you learn in Film and Media Studies will help prepare you for many different kinds of careers. Because we emphasize writing and critical thinking skills as well as the body of knowledge that constitutes our discipline, students are trained to have the kinds of intellectual and communication skills that many employers seek. Your studies can help you become an:</p>
           </div>
             <div class="row">
-              <div class="col-md-4 col-md-offset-1">
+              <div class="col-md-4 col-md-offset-1 col-xs-6 col-sm-6">
                 <ul>
                 <li>Actor</li>
                 <li>Advertising Manager</li>
@@ -173,7 +174,7 @@
                 <li>Film Editor</li>
                 </ul>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 col-xs-6 col-sm-6">
                 <ul>
                   <li>Filmmaker</li>
                   <li>Historian</li>
@@ -196,7 +197,7 @@
           </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
           <h2 class="text-left">Explore Your Creative Side</h2>
           <br>
           <div class="row">
@@ -204,7 +205,7 @@
               <p class="text-justify ">As the so-called seventh art, film has often been viewed as a synthetic art form that combines elements of several other kinds of creative expression. As such, Film and Media students are able to use what they have learned in the study of other art forms, such as:</p>
             </div>
             <div class="row">
-              <div class="col-md-4 col-md-offset-1">
+              <div class="col-md-4 col-md-offset-1 col-xs-6 col-sm-6">
                 <ul>
                 <li>American Culture Studies</li>
                 <li>Art History</li>
@@ -219,7 +220,7 @@
                 <li>History</li>
                 </ul>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 col-xs-6 col-sm-6">
                 <ul>
                   <li>Linguistics</li>
                   <li>Music</li>
@@ -242,7 +243,6 @@
 <br>
 <hr>
 
-
 <footer class="site-footer">
   <div class="container">
     <div class="row">
@@ -250,10 +250,5 @@
         <p><small>Film And Media Studies | Washington University in St. Louis | One Brookings Drive, St. Louis, MO 63130-4899 | <a href="mailto:fms@wustl.edu?Subject=Hello" target="_top">fms@wustl.edu</a></small></p>
 </footer>
 </body>
-
-
-
-
-
 
 </html>
